tests/semantic_errors/negative_line_width.draw
LINE(50, 50, 300, 100) COLOR blue WIDTH -1;
